typescript/checker/tests/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            181,
        ),
        hi: BytePos(
            194,
        ),
        ctxt: #0,
    },
    callee: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    182,
                ),
                hi: BytePos(
                    193,
                ),
                ctxt: #0,
            },
            kind: TsNumberKeyword,
        },
    ),
}
 --> $DIR/tests/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts:6:5
  |
6 | new (a ** b ** c);
  |     ^^^^^^^^^^^^^

